# django-invite

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  forms.py  functional_tests.py  models.py  pyproject.toml  requirements.txt  settings.py  setup.py  tests.py  tox.ini  urls.py  views.py
.github/: workflows
.github/workflows/: test.yml
docs/: Makefile  conf.py  configuration.rst  index.rst  password-reset.rst  permissions.rst  quickstart.rst
invite/: forms.py  models.py  settings.py  urls.py  utils.py  views.py
invite/migrations/: 0001_initial.py  0002_abstract_invitation.py  0003_abstract_invitation_auto_now_add.py  0004_auto_20191126_1740.py  0005_passwordresetinvitation_created.py
invite/templates/invite/: _invitation_email_permission.html  about.html  amnesia.html  base.html  confirm_reset.html  contact.html  denied.html  index.html  invitation_email.txt  invite.html  login.html  reset.html  reset_confirm_email.txt  reset_email.txt  sent.html  signup.html
requirements/: requirements-base.txt  requirements-test.txt
templates/invite/: about.html  amnesia.html  base.html  confirm_reset.html  denied.html  index.html  invitation_email.txt  invite.html  login.html  logout.html  reset.html  reset_confirm_email.txt  reset_confirm_email_message.txt  reset_email.txt  sent.html  signup.html
tests/: test_all.py  tests.py  urls.py
tests/settings/: common.py  dev.py  test.py
